--- a/src/app/shared/components/progressbar/progressbar.component.html
+++ b/src/app/shared/components/progressbar/progressbar.component.html
@@ -1,15 +1,11 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="progress">
-        <div
-          class="progress-bar progress-bar-striped progress-bar-animated"
-          role="progressbar"
-          aria-valuenow="75"
-          aria-valuemin="0"
-          aria-valuemax="100"
-          style="width: 75%;"
-        ></div>
+      <h1>Uploading...</h1>
+      <div class="loading">
+        <div class="line-box">
+          <div class="line"></div>
+        </div>
       </div>
     </div>
   </div>
