--- a/src/styles.css
+++ b/src/styles.css
@@ -2,17 +2,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 html {
-  position: relative;
-  min-height: 100%;
+  height: 100vh;
+  min-height: 100vh;
 }
 
 body {
   font-family: 'Poppins', sans-serif !important;
+  height: 100vh;
+  min-height: 100%;
   max-width: 100vw;
   max-height: 100vh;
+  background-size: cover;
+  margin-bottom: 60px;
 }
 
 /* personal class */
 .hv100 {
   height: 100vh;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
