Fin del proyecto

--- a/src/app/modules/image-link/pages/image-link.component.html
+++ b/src/app/modules/image-link/pages/image-link.component.html
@@ -11,7 +11,7 @@
             <i class="fa-solid fa-check"></i>
           </div>
           <h2 class="card-title p-3">Uploaded Successfully!</h2>
-          <img [src]="imageUrl" alt="" />
+          <img class="img__upload" [src]="imageUrl" alt="" />
           <div class="input-group p-3">
             <input
               id="clipboardExample1"
