--- a/src/app/modules/image-link/pages/image-link.component.css
+++ b/src/app/modules/image-link/pages/image-link.component.css
@@ -34,9 +34,11 @@
   color: #fff;
 }
 
-.succes__upload img {
+.card-body img {
   width: 338px;
   height: 224.4px;
+  max-width: 338px;
+  max-height: 224.4px;
   border-radius: 12px;
   transform: scale(0.9);
 }
